--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor de Clientes Premium</title>
-    
+
     <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <div class="app-container">
         <!-- Sidebar Navigation -->
@@ -57,8 +59,20 @@
         </div>
     </div>
 
+    <!-- Generic Modal for Alerts/Confirms -->
+    <div id="generic-modal" class="modal hidden">
+        <div class="modal-content small-modal">
+            <h3 id="generic-modal-title" style="margin-bottom: 1rem;">Titulo</h3>
+            <p id="generic-modal-message" style="margin-bottom: 2rem; color: var(--text-muted);">Mensaje</p>
+            <div id="generic-modal-actions" style="display: flex; justify-content: flex-end; gap: 1rem;">
+                <!-- Buttons injected by JS -->
+            </div>
+        </div>
+    </div>
+
     <!-- Scripts -->
-    <script src="js/api.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/api.js?v=2"></script>
+    <script src="js/app.js?v=2"></script>
 </body>
+
 </html>
