--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=6">
 </head>
 
 <body>
@@ -70,8 +70,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/api.js?v=5"></script>
-    <script src="js/app.js?v=5"></script>
+    <script src="js/api.js?v=6"></script>
+    <script src="js/app.js?v=6"></script>
 </body>
 
 </html>
