--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,15 +63,15 @@
         <div class="modal-content small-modal">
             <h3 id="generic-modal-title" style="margin-bottom: 1rem;">Titulo</h3>
             <p id="generic-modal-message" style="margin-bottom: 2rem; color: var(--text-muted);">Mensaje</p>
-            <div id="generic-modal-actions" style="display: flex; justify-content: flex-end; gap: 1rem;">
+            <div id="generic-modal-actions" style="display: flex; gap: 1rem;">
                 <!-- Buttons injected by JS -->
             </div>
         </div>
     </div>
 
     <!-- Scripts -->
-    <script src="js/api.js?v=7"></script>
-    <script src="js/app.js?v=7"></script>
+    <script src="js/api.js?v=8"></script>
+    <script src="js/app.js?v=8"></script>
 </body>
 
 </html>
