update light mode

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,6 +40,9 @@
             <header class="top-bar">
                 <h1 id="page-title">Listado de Clientes</h1>
                 <div class="user-profile">
+                    <div class="theme-toggle" id="theme-toggle" onclick="App.Theme.toggle()" title="Cambiar tema">
+                        <i class="fa-solid fa-sun"></i>
+                    </div>
                     <div class="avatar"><i class="fa-solid fa-user"></i></div>
                 </div>
             </header>
